# jsonschema2ddl

./: Makefile  pyproject.toml
docs/doctrees/: changelog.doctree  index.doctree  readme.doctree
docs/doctrees/api/: jsonschema2ddl.doctree  modules.doctree
docs/html/: .buildinfo  changelog.html  genindex.html  index.html  objects.inv  py-modindex.html  readme.html  search.html  searchindex.js
docs/html/_modules/: index.html
docs/html/_modules/jsonschema2ddl/: models.html  translators.html  utils.html
docs/html/api/: jsonschema2ddl.html  modules.html
src/jsonschema2ddl/: __init__.py  models.py  translators.py  types.py
test/: conftest.py  test_duckdb.py  test_duckdb_advanced.py  test_duckdb_enhanced_fk.py  test_utils.py
