[tool.poetry]
authors = ["Pablo San José <pablo.sanjose@clarity.ai>"]
description = "Generate Database tables from JSON schema"
name = "jsonschema2ddl"
version = "0.0.0"

[tool.poetry.dependencies]
change_case = "^0.5.2"
iso8601 = "^0.1.12"
jsonschema = "^3.2.0"
python = ">=3.10,<4.0"
psycopg-binary = "^3.2.9"
duckdb = "^1.3.2"

[tool.poetry.dev-dependencies]
SQLAlchemy = "^1.3.19"
Sphinx = "^4.5.0"
black = "~22.1"
flake8 = "~3.9.2"
ipython = "^7.18.1"
m2r2 = "^0.3.2"
pyscaffold = "^3.2a0<3.3a0<"
pytest = "^6.2.5"
pytest-cov = "2.7.1"
rope = "~0.17.0"
sphinx-rtd-theme = "^1.0.0"
testcontainers = "^3.1.0"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool.black]
line-length=120
