[tool.poetry]
authors = ["Pablo San José <pablo.sanjose@clarity.ai>"]
description = "Generate Database tables from JSON schema"
name = "jsonschema2ddl"
version = "0.4.0"

[tool.poetry.dependencies]
change_case = "^0.5.2"
iso8601 = "^1.1.0"
jsonschema = "^4.17.0"
python = ">=3.10,<4.0"
psycopg-binary = "^3.2.9"
duckdb = "^1.3.2"

[tool.poetry.dev-dependencies]
SQLAlchemy = "^1.4.0"
Sphinx = "^5.0.0"
black = "^23.0.0"
flake8 = "^6.0.0"
ipython = "^8.0.0"
m2r2 = "^0.3.2"
pyscaffold = "^4.0.0"
pytest = "^7.0.0"
pytest-cov = "^4.0.0"
rope = "^1.0.0"
sphinx-rtd-theme = "^1.2.0"
testcontainers = "^3.7.0"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool.black]
line-length=120
