[project]
authors = [
    {name = "Pablo San José", email = "pablo.sanjose@clarity.ai"},
]
description = "Generate Database tables from JSON schema"
name = "jsonschema2ddl"
version = "0.4.0"
requires-python = ">=3.9,<4.0"
dependencies = [
    "change-case>=0.5.2",
    "iso8601>=1.1.0",
    "jsonschema>=4.17.0",
    "poetry>=2.1.3",
]

[project.optional-dependencies]
duckdb = [
    "duckdb>=1.3.2",
]
postgres = [
    "psycopg>=3.0.0",
]
redshift = [
    "psycopg>=3.0.0",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "flake8>=7.3.0",
    "ipython>=8.18.1",
    "m2r2>=0.3.4",
    "pyscaffold>=4.6",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "rope>=1.14.0",
    "sphinx>=7.4.7",
    "sphinx-rtd-theme>=3.0.2",
    "sqlalchemy>=2.0.41",
    "testcontainers>=4.12.0",
]

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=2.1.0"]

[tool.black]
line-length=120
